--- a/.github/workflows/rerun-failed-job.yaml
+++ b/.github/workflows/rerun-failed-job.yaml
@@ -11,6 +11,9 @@ jobs:
   rerun-failed-jobs:
     name: Rerun failed jobs
     runs-on: ubuntu-latest
+    permissions:
+      issues: write
+      actions: write
     if: ${{ !github.event.issue.pull_request }}
     steps:
     - uses: actions/checkout@8e5e7e5ab8b370d6c329ec480221332ada57f0ab # v3.5.2
